# mandala-wasm

./: .eslintrc.json  .gitignore  Cargo.toml  LICENSE  Makefile  README.adoc  serve.py
src/: lib.rs  mandala.rs  point.rs  segment.rs
static/: index.html  index.js  mandala.html  mandala.js  site.css
