[package]
name = "mandala-wasm"
version = "0.1.0"
authors = ["Marcin Szyszko"]
edition = "2018"
publish = false

[lib]
crate-type = ["cdylib"]

[features]
default = ["wee_alloc"]

[dependencies]
wasm-bindgen = "0.2.68"
wee_alloc = { version = "0.4.5", optional = true }

[dependencies.rand]
version = "0.7.3"
features = [
  'small_rng'
]

# The following needs to be there because of this bug:
# https://github.com/rustwasm/wasm-pack/issues/886
# Reconsider once wasm-bindgen gets updated
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-Os", "--enable-mutable-globals"]

[profile.release]
lto = true
opt-level = 's'
panic = 'abort'
